<resources>
    <string name="app_name">TravelApp</string>
    <string name="translator">Translator</string>
    <string name="home">Home</string>
    <string name="map">Map</string>
    <string name="quiz">Quiz</string>
    <string name="phrases">Phrases</string>
    <string name="change_map_style">change_map_style</string>
    <string name="policy">Policy</string>
    <string name="title">Title</string>
    <string name="description">Description</string>


</resources>