<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:title="@string/home"
        android:icon="@drawable/ic_baseline_home_24dp"/>
    <item
        android:id="@+id/nav_map"
        android:icon="@drawable/ic_baseline_map_24dp"
        android:title="@string/map" />

    <item
        android:id="@+id/nav_quiz"
        android:icon="@drawable/ic_baseline_quiz_24dp"
        android:title="@string/quiz" />

    <item
        android:id="@+id/nav_translate"
        android:icon="@drawable/ic_baseline_translate_24dp"
        android:title="@string/translator" />

    <item
        android:id="@+id/nav_phrases"
        android:icon="@drawable/ic_baseline_language_24dp"
        android:title="@string/phrases" />
</menu>