<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="op.mobile.app.dev.travelapp.ui.home.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_map"
        android:name="op.mobile.app.dev.travelapp.ui.map.MapFragment"
        android:label="@string/map"
        tools:layout="@layout/fragment_map" />

    <fragment
        android:id="@+id/nav_quiz"
        android:name="op.mobile.app.dev.travelapp.ui.quiz.QuizFragment"
        android:label="@string/quiz"
        tools:layout="@layout/fragment_quiz" />

    <fragment
        android:id="@+id/nav_translate"
        android:name="op.mobile.app.dev.travelapp.ui.translate.TranslateFragment"
        android:label="@string/translator"
        tools:layout="@layout/fragment_translate" />


    <fragment
        android:id="@+id/nav_phrases"
        android:name="op.mobile.app.dev.travelapp.ui.phrases.PhrasesFragment"
        android:label="@string/phrases"
        tools:layout="@layout/fragment_phrases" />

</navigation>